Change radio buttons to dropdown buttons, fix padding and layout issues.

--- a/client/templates/add-meal.css
+++ b/client/templates/add-meal.css
@@ -4,3 +4,8 @@
 	background-color: white;
 	min-height: 620px;
 }
+
+
+.add-terms-container {
+	padding-left: 18px;
+}
